Cabal/tests/ParserTests/errors/leading-comma-2c.cabal
cabal-version:       3.0
name:                leading-comma
version:             0
synopsis:            leading comma, trailing comma, or ordinary
build-type:          Simple

library
  default-language: Haskell2010
  exposed-modules:
    LeadingComma, MixedComma NoComma
   

  build-depends: base, containers

  build-depends:
    deepseq,
    transformers,

  build-depends:
    , filepath
    , directory
